fixed horizontal scroll

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -49,7 +49,7 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 700px) {
   .card__content {
     width: 288px;
   }
