--- a/blocks/content.css
+++ b/blocks/content.css
@@ -4,7 +4,7 @@
   padding: 0 80px;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 700px) {
   .content {
     max-width: 288px;
     padding: 0 16px;
