--- a/blocks/page.css
+++ b/blocks/page.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 700px) {
   .page {
     min-width: 320px;
   }
